# gpha-mscape-chimera-synteny

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/chimera_synteny/: synteny.py
src/chimera_synteny/data/: lookup.txt  main.css  main.js
