[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-synteny"
dynamic = ["version"]
authors = [{ name = "Ashley Shalloe", email = "ashley.shalloe@ukhsa.gov.uk" }]
description = "Generates a HTML report with synteny plots, given CLIMB IDs as input"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyfunctional>=1.5.0", "pandas>=2.2.3", "biopython>=1.85", "tqdm", "climb-onyx-client", "plotly>=6.1.2", "taxaplease@git+https://github.com/ukhsa-collaboration/gpha-mscape-taxaplease"]

[project.urls]
Homepage = "https://github.com/ukhsa-collaboration"
Issues = "https://github.com/ukhsa-collaboration"

[project.scripts]
chimera-synteny = "chimera_synteny.synteny:main"

[tool.setuptools.dynamic]
version = { attr = "chimera_synteny.synteny.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chimera_synteny = ["data/*.css", "data/*.js", "data/*.txt"]
